--- a/index.html
+++ b/index.html
@@ -289,22 +289,22 @@
                 title="Satay Chicken Skewers" loading="lazy">
               <div class="small-menu__image-description">Satay Chicken Skewers</div>
             </div>
-          </div>
 
-          <!-- Next and previous buttons -->
-          <button class="small-menu__slideshow-button--prev" onclick="plusSlides(-1)" type="button"
-            aria-label="previous slide" aria-controls="slideshow-container">&#10094;</button>
-          <button class="small-menu__slideshow-button--next" onclick="plusSlides(1)" type="button"
-            aria-label="next slide" aria-controls="slideshow-container">&#10095;</button>
+            <!-- Next and previous buttons -->
+            <button class="small-menu__slideshow-button--prev" onclick="plusSlides(-1)" type="button"
+              aria-label="previous slide" aria-controls="slideshow-container">&#10094;</button>
+            <button class="small-menu__slideshow-button--next" onclick="plusSlides(1)" type="button"
+              aria-label="next slide" aria-controls="slideshow-container">&#10095;</button>
+          </div>
 
           <!-- The dots/circles -->
           <div class="small-menu__slideshow-dots" role="tablist" aria-label="Slides">
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab"
-              aria-label="Slide 1" aria-controls="slide1"></button>
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab"
-              aria-label="Slide 2" aria-controls="slide2"></button>
-            <button class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab"
-              aria-label="Slide 3" aria-controls="slide3"></button>
+            <span class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab"
+              aria-label="Slide 1" aria-controls="slide1"></span>
+            <span class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab"
+              aria-label="Slide 2" aria-controls="slide2"></span>
+            <span class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab"
+              aria-label="Slide 3" aria-controls="slide3"></span>
           </div>
 
         </div>
