--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
 
           <!-- The dots/circles -->
           <div class="small-menu__slideshow-dots" role="tablist" aria-label="Slides">
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab"
-              aria-label="Slide 1" aria-controls="slide1"></span>
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab"
-              aria-label="Slide 2" aria-controls="slide2"></span>
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab"
-              aria-label="Slide 3" aria-controls="slide3"></span>
+            <button class="small-menu__slideshow-dot" onclick="currentSlide(1)" type="button" role="tab"
+              aria-label="Slide 1" aria-controls="slide1"></button>
+            <button class="small-menu__slideshow-dot" onclick="currentSlide(2)" type="button" role="tab"
+              aria-label="Slide 2" aria-controls="slide2"></button>
+            <button class="small-menu__slideshow-dot" onclick="currentSlide(3)" type="button" role="tab"
+              aria-label="Slide 3" aria-controls="slide3"></button>
           </div>
 
         </div>
