created src folder and changed files' path in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta property="og:image:height" content="630" />
 
   <title>R2 Place</title>
-  <link rel="icon" type="image/x-icon" href="./images/R2.png">
+  <link rel="icon" type="image/x-icon" href="./src/images/R2.png">
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
   <!-- external source -->
@@ -44,32 +44,32 @@
 
   <!-- internal source -->
   <!-- CSS for R2 Place -->
-  <link rel="stylesheet" href="./scss/style.css">
+  <link rel="stylesheet" href="./src/scss/style.css">
   <noscript>
-    <link rel="stylesheet" href="./noscript.css">
+    <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
 
   <!-- Javascript for R2 Place -->
   <!-- script for loader -->
-  <script defer src="./scripts/loader.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/loader.js" charset="utf-8"></script>
   <!-- script for navbar -->
-  <script defer src="./scripts/navbar.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/navbar.js" charset="utf-8"></script>
   <!-- script for small menu -->
-  <script defer src="./scripts/smallMenu.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/smallMenu.js" charset="utf-8"></script>
   <!-- script for carousel -->
-  <script defer src="./scripts/carousel.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/carousel.js" charset="utf-8"></script>
   <!-- script for large menu -->
-  <script defer src="./scripts/largeMenu.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/largeMenu.js" charset="utf-8"></script>
   <!-- script for default values in reservation form -->
-  <script defer src="./scripts/reservationForm/formDefaultValues.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/reservationForm/formDefaultValues.js" charset="utf-8"></script>
   <!-- script for validation of reservation form -->
-  <script defer src="./scripts/reservationForm/formValidation.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/reservationForm/formValidation.js" charset="utf-8"></script>
   <!-- script for textarea in reservation form -->
-  <script defer src="./scripts/reservationForm/formTextarea.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/reservationForm/formTextarea.js" charset="utf-8"></script>
   <!-- script for reservation form -->
-  <script defer src="./scripts/reservationForm/formSubmission.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/reservationForm/formSubmission.js" charset="utf-8"></script>
   <!-- script for footer -->
-  <script defer src="./scripts/footer.js" charset="utf-8"></script>
+  <script defer src="./src/scripts/footer.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -120,11 +120,11 @@
       <!-- Home -->
       <section id="home">
         <picture>
-          <!-- <source media="(min-width: 930.5px)" srcset="./images/home-bg-largescreen.webp" type="image/webp"> -->
-          <source media="(min-width: 930.5px)" srcset="./images/home-bg-largescreen.jpeg">
-          <!-- <source media="(min-width: 449.5px)" srcset="./images/home-bg-mediumscreen.webp" type="image/webp"> -->
-          <source media="(min-width: 449.5px)" srcset="./images/home-bg-mediumscreen.jpeg">
-          <img src="./images/home-bg-smallscreen.jpeg" alt="R2 Place">
+          <!-- <source media="(min-width: 930.5px)" srcset="./src/images/home-bg-largescreen.webp" type="image/webp"> -->
+          <source media="(min-width: 930.5px)" srcset="./src/images/home-bg-largescreen.jpeg">
+          <!-- <source media="(min-width: 449.5px)" srcset="./src/images/home-bg-mediumscreen.webp" type="image/webp"> -->
+          <source media="(min-width: 449.5px)" srcset="./src/images/home-bg-mediumscreen.jpeg">
+          <img src="./src/images/home-bg-smallscreen.jpeg" alt="R2 Place">
         </picture>
         <div class="hero-text">
           <h1>R2 Place</h1>
@@ -212,8 +212,8 @@
               <p>Macaroni and Cheese with Parma Ham</p>
             </div>
             <div class="large-menu__image">
-              <img src="./images/salmon-spaghetti.webp"
-                onerror="this.onerror=null; this.src='./images/salmon-spaghetti.jpeg';" alt="Salmon Spaghetti"
+              <img src="./src/images/salmon-spaghetti.webp"
+                onerror="this.onerror=null; this.src='./src/images/salmon-spaghetti.jpeg';" alt="Salmon Spaghetti"
                 title="Salmon Spaghetti" loading="lazy">
               <p class="large-menu__image-description">Salmon Spaghetti</p>
             </div>
@@ -233,8 +233,8 @@
               <p>Grilled Mackerel with Tofu and Black Rice</p>
             </div>
             <div class="large-menu__image">
-              <img src="./images/thai-pineapple-fried-rice.webp"
-                onerror="this.onerror=null; this.src='./images/thai-pineapple-fried-rice.jpeg';"
+              <img src="./src/images/thai-pineapple-fried-rice.webp"
+                onerror="this.onerror=null; this.src='./src/images/thai-pineapple-fried-rice.jpeg';"
                 alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
               <p class="large-menu__image-description">Thai Pineapple Fried Rice</p>
             </div>
@@ -254,9 +254,9 @@
               <p>Curry Prawn in Petits Pains</p>
             </div>
             <div class="large-menu__image">
-              <img src="./images/satay-chicken-skewers.webp"
-                onerror="this.onerror=null; this.src='./images/satay-chicken-skewers.jpeg';" alt="Satay Chicken Skewers"
-                title="Satay Chicken Skewers" loading="lazy">
+              <img src="./src/images/satay-chicken-skewers.webp"
+                onerror="this.onerror=null; this.src='./src/images/satay-chicken-skewers.jpeg';"
+                alt="Satay Chicken Skewers" title="Satay Chicken Skewers" loading="lazy">
               <p class="large-menu__image-description">Satay Chicken Skewers</p>
             </div>
           </div>
@@ -269,24 +269,24 @@
               <!-- images with caption text -->
               <div class="small-menu__slide small-menu__slide--fade" id="slide1" role="tabpanel"
                 aria-roledescription="slide" aria-label="Slide 1 of 3">
-                <img src="./images/salmon-spaghetti.webp"
-                  onerror="this.onerror=null; this.src='./images/salmon-spaghetti.jpeg';" alt="Salmon Spaghetti"
+                <img src="./src/images/salmon-spaghetti.webp"
+                  onerror="this.onerror=null; this.src='./src/images/salmon-spaghetti.jpeg';" alt="Salmon Spaghetti"
                   title="Salmon Spaghetti" loading="lazy">
                 <div class="small-menu__image-description">Salmon Spaghetti</div>
               </div>
 
               <div class="small-menu__slide small-menu__slide--fade" id="slide2" role="tabpanel"
                 aria-roledescription="slide" aria-label="Slide 2 of 3">
-                <img src="./images/thai-pineapple-fried-rice.webp"
-                  onerror="this.onerror=null; this.src='./images/thai-pineapple-fried-rice.jpeg';"
+                <img src="./src/images/thai-pineapple-fried-rice.webp"
+                  onerror="this.onerror=null; this.src='./src/images/thai-pineapple-fried-rice.jpeg';"
                   alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
                 <div class="small-menu__image-description">Thai Pineapple Fried Rice</div>
               </div>
 
               <div class="small-menu__slide small-menu__slide--fade" id="slide3" role="tabpanel"
                 aria-roledescription="slide" aria-label="Slide 3 of 3">
-                <img src="./images/satay-chicken-skewers.webp"
-                  onerror="this.onerror=null; this.src='./images/satay-chicken-skewers.jpeg';"
+                <img src="./src/images/satay-chicken-skewers.webp"
+                  onerror="this.onerror=null; this.src='./src/images/satay-chicken-skewers.jpeg';"
                   alt="Satay Chicken Skewers" title="Satay Chicken Skewers" loading="lazy">
                 <div class="small-menu__image-description">Satay Chicken Skewers</div>
               </div>
@@ -319,8 +319,8 @@
         <div class="reservation">
           <!-- reservation photo -->
           <div class="reservation__photo">
-            <img src="./images/r2place-entrance.webp"
-              onerror="this.onerror=null; this.src='./images/r2place-entrance.jpeg';" alt="R2 Place Entrance"
+            <img src="./src/images/r2place-entrance.webp"
+              onerror="this.onerror=null; this.src='./src/images/r2place-entrance.jpeg';" alt="R2 Place Entrance"
               title="R2 Place Entrance" loading="lazy">
           </div>
 
