--- a/index.html
+++ b/index.html
@@ -50,26 +50,28 @@
   </noscript>
 
   <!-- Javascript for R2 Place -->
+  <script defer src="./src/scripts/script.js" charset="utf-8"></script>
+
   <!-- script for loader -->
-  <script defer src="./src/scripts/loader.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/loader.js" charset="utf-8"></script> -->
   <!-- script for navbar -->
-  <script defer src="./src/scripts/navbar.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/navbar.js" charset="utf-8"></script> -->
   <!-- script for small menu -->
-  <script defer src="./src/scripts/smallMenu.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/menu/smallMenu.js" charset="utf-8"></script> -->
   <!-- script for carousel -->
-  <script defer src="./src/scripts/carousel.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/menu/carousel.js" charset="utf-8"></script> -->
   <!-- script for large menu -->
-  <script defer src="./src/scripts/largeMenu.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/menu/largeMenu.js" charset="utf-8"></script> -->
   <!-- script for default values in reservation form -->
-  <script defer src="./src/scripts/reservationForm/formDefaultValues.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/reservationForm/formDefaultValues.js" charset="utf-8"></script> -->
   <!-- script for validation of reservation form -->
-  <script defer src="./src/scripts/reservationForm/formValidation.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/reservationForm/formValidation.js" charset="utf-8"></script> -->
   <!-- script for textarea in reservation form -->
-  <script defer src="./src/scripts/reservationForm/formTextarea.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/reservationForm/formTextarea.js" charset="utf-8"></script> -->
   <!-- script for reservation form -->
-  <script defer src="./src/scripts/reservationForm/formSubmission.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/reservationForm/formSubmission.js" charset="utf-8"></script> -->
   <!-- script for footer -->
-  <script defer src="./src/scripts/footer.js" charset="utf-8"></script>
+  <!-- <script defer src="./src/scripts/footer.js" charset="utf-8"></script> --> -->
 </head>
 
 <body>
