--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
           <source media="(min-width: 930.5px)" srcset="./dist/images/home-bg-largescreen.jpeg">
           <source media="(min-width: 449.5px)" srcset="./dist/images/home-bg-mediumscreen.webp" type="image/webp">
           <source media="(min-width: 449.5px)" srcset="./dist/images/home-bg-mediumscreen.jpeg">
-          <img src="./dist/images/home-bg-smallscreen.jpeg" alt="R2 Place">
+          <img src="./dist/images/home-bg-smallscreen.webp"
+            onerror="this.onerror=null; this.src='./dist/images/home-bg-smallscreen.jpeg';" alt="R2 Place">
         </picture>
         <div class="hero-text">
           <h1>R2 Place</h1>
