--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
   <!-- internal source -->
   <!-- CSS for R2 Place -->
-  <link rel="stylesheet" href="./dist/css/style.css">
+  <link rel="stylesheet" href="./dist/css/style.min.css">
   <noscript>
     <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
 
   <!-- Javascript for R2 Place -->
-  <script defer src="./dist/scripts/script.js" charset="utf-8"></script>
+  <script defer src="./dist/scripts/script.min.js" charset="utf-8"></script>
 
 </head>
 
