lazy load hero-image

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
           <source media="(min-width: 449.5px)" srcset="./dist/images/home-bg-mediumscreen.webp" type="image/webp">
           <source media="(min-width: 449.5px)" srcset="./dist/images/home-bg-mediumscreen.jpeg">
           <img src="./dist/images/home-bg-smallscreen.webp"
-            onerror="this.onerror=null; this.src='./dist/images/home-bg-smallscreen.jpeg';" alt="R2 Place">
+            onerror="this.onerror=null; this.src='./dist/images/home-bg-smallscreen.jpeg';" alt="R2 Place"
+            loading="lazy">
         </picture>
         <div class="hero-text">
           <h1>R2 Place</h1>
