Revert "preload google font"
This reverts commit e74fddc7670cb850524d9f23ecc624c356a82ac6.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Preload Google font for logo -->
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" as="style">
-  <!-- Preload Google font for body -->
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" as="style">
+  <!-- Google font for logo -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap">
+  <!-- Google font for body -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap">
   <!-- Font Awesome -->
   <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 
