--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Google font for logo -->
-  <link rel="preload" href="./src/googlefont/dancing-script.css">
-  <!-- Google font for logo
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
+  <link rel="stylesheet" href="./src/googlefont/dancing-script.css">
+  <!-- Google font for logo -->
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
   <!-- Google font for body -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap">
   <!-- Font Awesome -->
