--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <!-- Google font for logo -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
   <!-- Google font for body -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap">
+  <link rel="stylesheet" href="./src/googlefont/rancho.css">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap"> -->
   <!-- Font Awesome -->
   <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 
