--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
   <link rel="icon" type="image/x-icon" href="./dist/images/R2.png">
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
-  <!-- external source -->
-  <!-- Google font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Google font for logo -->
   <link rel="stylesheet" href="./src/googlefont/dancing-script.css">
+  <!-- Google font for body -->
+  <link rel="stylesheet" href="./src/googlefont/rancho.css">
+
+  <!-- external source -->
+  <!-- Google font -->
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
   <!-- Google font for logo -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"> -->
   <!-- Google font for body -->
-  <link rel="stylesheet" href="./src/googlefont/rancho.css">
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap"> -->
+
   <!-- Font Awesome -->
   <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 
