--- a/index.html
+++ b/index.html
@@ -29,21 +29,43 @@
   <link rel="icon" type="image/x-icon" href="./dist/images/R2.png">
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
-  <!-- Google fonts -->
-  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
-
   <!-- Font Awesome -->
   <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 
   <!-- internal source -->
+  <!-- Google fonts -->
+  <link rel="stylesheet" href="./src/googlefont/google-fonts.css">
+
   <!-- CSS for R2 Place -->
   <link rel="stylesheet" href="./dist/css/style.min.css">
   <noscript>
     <link rel="stylesheet" href="./src/noscript.css">
   </noscript>
 
+  <script type="text/javascript">
+    // Check if the browser supports ES6 modules
+    const supportsES6Modules = 'noModule' in HTMLScriptElement.prototype;
+
+    // Load the appropriate script based on ES6 module support
+    if (supportsES6Modules) {
+      // Modern browser supporting ES6 modules
+      const script = document.createElement('script');
+      script.src = 'non-critical-modern-script.min.js';
+      script.type = 'module';
+      script.defer = true;
+      document.head.appendChild(script);
+    } else {
+      // Legacy browser not supporting ES6 modules
+      const script = document.createElement('script');
+      script.src = 'non-critical-legacy-script.min.js';
+      script.setAttribute('nomodule', '');
+      script.defer = true;
+      document.head.appendChild(script);
+    }
+  </script>
+
   <!-- Javascript for R2 Place -->
-  <script defer src="./dist/scripts/script.min.js" charset="utf-8"></script>
+  <!-- <script defer src="./dist/scripts/script.min.js" charset="utf-8"></script> -->
 
 </head>
 
